--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,8 @@
                 <ul id="sidemenu">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="cars.html">Cars</a></li>
-                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="checkout.html">Checkout</a></li>
                 </ul>
             </nav>
            
@@ -22,7 +23,6 @@
     <div id="contact">
         <div class="container">
             <div class="row">
-                <!-- Contact Left -->
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Us</h1>
                     <div class="social-icons">
@@ -34,7 +34,6 @@
                     
                 </div>
 
-                <!-- Contact Right -->
                 <div class="contact-right">
                     <form>
                         <input type="text" name="name" placeholder="Your Name" required>
