--- a/checkout.html
+++ b/checkout.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Checkout</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <style>
         .checkout-form select {
             width: 100%;
@@ -43,7 +44,7 @@
 
     <div class="checkout-container">
         <h1 class="sub-title">Checkout</h1>
-        <form class="checkout-form">
+        <form class="checkout-form" id="checkout-form">
             <label for="car-selection">Select a Car</label>
             <select id="car-selection" name="car-selection" required>
                 <option value="">--Select a Car--</option>
@@ -89,6 +90,7 @@
         }
 
         document.addEventListener('DOMContentLoaded', populateCarDropdown);
+        
     </script>
 </body>
 </html>
